Updated clean rule

--- a/Push_Swap/Makefile
+++ b/Push_Swap/Makefile
@@ -103,6 +103,7 @@ clean:
 	@Make clean -C ../libft
 	@$(call colourecho, " - Clearing object files")
 	@rm -f $(OBJS)
+	@rm -Rf $(OBJS_PATH)
 	@$(call colourecho, "clean done!")
 
 fclean: clean
